--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "paketcheck",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "24.x"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "vite build",
     "preview": "vite preview"
   },
