--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": "20.x"
+    "node": ">=18 <=22"
   },
   "scripts": {
     "dev": "vite --port 5173",
